# fluent-bit

./: CMakeLists.txt  cmake-vehicle.sh
cmake/: libraries.cmake  windows-setup.cmake
conf/: out_mqtt.conf
dockerfiles/: Dockerfile.vehicle
lib/paho.mqtt.embedded-c/MQTTClient-C/src/: CMakeLists.txt
lib/paho.mqtt.embedded-c/MQTTPacket/src/: CMakeLists.txt
plugins/: CMakeLists.txt
plugins/in_http/: http_prot.c
plugins/in_netif/: in_netif.c  in_netif.h
plugins/in_tail/: tail.c
plugins/out_calyptia/: calyptia.c
plugins/out_mqtt/: CMakeLists.txt  mqtt.c  mqtt.h  mqtt_config.c  mqtt_config.h  posix_sockets.c  posix_sockets.h
src/: flb_utils.c
tests/internal/: utils.c
tests/runtime/: in_http.c  processor_metrics_selector.c
